--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -9,6 +9,42 @@ body {
   padding: 0;
 }
 
+.m-0 {
+  margin: 0;
+}
+
+.flex {
+  display: flex;
+}
+
+.align-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 0 auto;
+}
+
+.header {
+  background-color: rgb(185, 233, 247);
+  text-align: center;
+  padding: 25px 0;
+}
+
+.img {
+  width: 100%;
+}
+
+.img-container {
+  max-width: 60px;
+}
+
 .waldo-pic {
   width: 100%;
+  cursor: url("/circle.svg"), pointer;
 }
